# esp32-kitty-gif

kitty-gif/: Cargo.toml  build.rs  diagram.json  partitions.csv  sdkconfig.defaults  wokwi.toml
kitty-gif/.cargo/: config.toml
kitty-gif/src/: bring_up.rs  cat_dance_frames.rs  cat_eating_frames.rs  cat_playing_frames.rs  consts.rs  error.rs  generated_frames.rs  lcd.rs  lunafluff_4_jump_rgba8.rs  macros.rs  main.rs  mechapup_3_eat_rgba8.rs  ota.rs  touch.rs  ui.rs  wifi.rs
kitty-gif/src/gif/: mechapup_3_sit_rgba8.rs  mechapup_3_sleep_rgba8.rs  mod.rs
kitty-gif/ui/: ai_screen_1.slint  app-window.slint  device-link.slint  device-linked.slint  game.slint  home-lock.slint  home-window.slint  home.slint  iot.slint  link-device-sucess.slint  loading-screen.slint  roundprogress.slint  sensors.slint  splash-window.slint  top-bar.slint  update-fw.slint  virtual_keyboard.slint  wifi-component.slint  wifi-config.slint  wifi-scan.slint
kitty-gif/ui/assets/: deviceIds.json
