[package]
name = "kitty-gif"
version = "0.1.0"
authors = ["TueTran2008 <tuetd174343@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "kitty-gif"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
slint = { version = "1.8.0", default-features = false , features = ["compat-1-2", "unsafe-single-threaded", "libm", "renderer-software"]}

[build-dependencies]
embuild = "0.33"
slint-build = "1.8.0"
